# python-template

./: .coveragerc  README.md  justfile  mypy.ini  pyproject.toml  python style guide.md  python style guide.txt  python-style-guide.md
docs/: CHANGELOG.md
src/python_template/: __main__.py
